*CVS*

* Added the possibility of marking fields as being in error without adding a message (using nil) to it that'll get displayed wth full_messages #208 [mjobin] 

* Fixed Base.errors to be indifferent as to whether strings or symbols are used. Examples:

    Before:
      errors.add(:name, "must be shorter") if name.size > 10
      errors.on(:name)  # => "must be shorter"
      errors.on("name") # => nil

    After:
      errors.add(:name, "must be shorter") if name.size > 10
      errors.on(:name)  # => "must be shorter"
      errors.on("name") # => "must be shorter"

* Added Base.validate_presence as an alternative to implementing validate and doing errors.add_on_empty yourself.

* Added Base.validate_uniqueness that alidates whether the value of the specified attributes are unique across the system. 
  Useful for making sure that only one user can be named "davidhh".
  
    Model:
      class Person < ActiveRecord::Base
        validate_uniqueness :user_name
      end
  
    View:
      <%= text_field "person", "user_name" %>
  
  When the record is created, a check is performed to make sure that no record exist in the database with the given value for the specified
  attribute (that maps to a column). When the record is updated, the same check is made but disregarding the record itself.


* Added Base.validate_confirmation that encapsulates the pattern of wanting to validate a password or email address field with a confirmation. Example:
 
     Model:
       class Person < ActiveRecord::Base
         validate_confirmation :password
       end
  
     View:
       <%= password_field "person", "password" %>
       <%= password_field "person", "password_confirmation" %>
  
   The person has to already have a password attribute (a column in the people table), but the password_confirmation is virtual.
   It exists only as an in-memory variable for validating the password. This check is performed both on create and update.